# opentelemetry_observabilidade

./: .env  comandos.txt  compose.yaml  docker-compose.yaml  locustfile.py  pyproject.toml
app/: app.py
